src/styles/main.css
/* ... */
@media screen and (max-width: 600px) {
	.related {
		margin-left: -2rem;
	}

	.related__item {
		padding-left: 2rem;
	}
}

@media screen and (max-width: 460px) {
	.related {
		margin-left: 0;
	}

	.related__item {
		float: none;
		width: auto;
		padding-left: 0;
	}
}

/* -------------------------------------------------------------------
 * ## comments 
 * ------------------------------------------------------------------- */
.comments-wrap {
	padding: 6.4rem 0 0 0;
	background-color: #ffffff;
}

.comments-wrap h3 {
	margin-top: 0;
}

.comments-wrap h3 span {
	display: block;
	font-family: 'IBM Plex Sans', sans-serif;
	font-weight: 400;
	font-size: 1.8rem;
	line-height: 1.556;
	color: #7e7e7e;
}

/* comments
 * -------------------------------------------------- */
#comments {
	padding-top: 2rem;
	padding-bottom: 1.2rem;
	border-top: 1px solid rgba(0, 0, 0, 0.1);
}

#comments ol,
#comments ul {
	list-style: none;
}

.commentlist {
	margin: 6rem 0 5.6rem;
	padding: 0;
}

.commentlist > .comment {
	position: relative;
	list-style: none;
	margin: 0;
	padding: 2rem 0 0 0;
	padding-left: 14%;
}

.comment__avatar {
	position: absolute;
	left: 0;
	display: block;
}

.comment__avatar img {
	height: 6.4rem;
	width: 6.4rem;
	border-radius: 100%;
	vertical-align: bottom;
}

.comment__info {
	position: relative;
}

.comment__info .comment__author {
	font-family: 'Heebo', sans-serif;
	font-weight: 500;
	font-size: 1.9rem;
	line-height: 1.684;
	font-style: normal;
	color: #000000;
}

.comment__meta {
	font-family: 'IBM Plex Sans', sans-serif;
	font-style: normal;
	line-height: 2.4rem;
	display: block;
	color: #7e7e7e;
	text-align: right;
	width: 150px;
	position: absolute;
	top: 0;
	right: 0;
}

.comment__meta .comment__time {
	font-size: 1.4rem;
	text-transform: uppercase;
	letter-spacing: 0.1rem;
	color: #7e7e7e;
}

.comment__meta .comment__reply a {
	font-size: 1.3rem;
	font-family: 'IBM Plex Sans', sans-serif;
	font-weight: 700;
	text-transform: uppercase;
	letter-spacing: 0.2rem;
	color: #000000;
}

.comment__text {
	clear: both;
	margin: 1.6rem 0 0 0;
	padding: 0 175px 0 0;
}

.comment ul.children {
	margin: 0;
	padding: 0;
}

.comment ul.children li {
	padding-left: 5%;
	margin-top: calc(3.2rem + 2rem);
	border-left: 1px solid rgba(0, 0, 0, 0.15);
}

/* comments form
 * ---------------------------- */
.comments-wrap .comment-respond {
	margin-top: 6.4rem;
}

.comment-respond form {
	padding-top: 6rem;
}

/* ------------------------------------------------------------------- 
 * responsive:
 * comments
 * ------------------------------------------------------------------- */
@media screen and (max-width: 1000px) {
	.comment__avatar img {
		height: 6rem;
		width: 6rem;
	}

	.comment__meta {
		text-align: left;
		width: auto;
		position: static;
	}

	.comment__meta .comment__time,
	.comment__meta .comment__reply {
		display: inline-block;
	}

	.comment__meta .comment__time {
		margin-right: 12px;
	}

	.comment__text {
		padding: 0;
	}

	.comments-wrap .comment-respond {
		margin-top: 4.4rem;
	}
}

@media screen and (max-width: 800px) {
	.comment__avatar img {
		margin-top: 0;
		height: 5.2rem;
		width: 5.2rem;
	}
}

@media screen and (max-width: 600px) {
	.commentlist > .comment {
		padding-top: 0;
		padding-left: 0;
	}

	.comment__avatar {
		display: none;
	}

	.comment ul.children li {
		margin-top: calc(3.2rem + 0rem);
	}
}

@media screen and (max-width: 500px) {
	.comment ul.children li {
		border-left: none;
	}
}

@media screen and (max-width: 400px) {
	.comment-respond form {
		padding-top: 3.2rem;
	}
}

/* -------------------------------------------------------------------
 * ## format gallery
 * ------------------------------------------------------------------- */
.format-gallery .entry__thumb {
	overflow: hidden;
}

.format-gallery .slider {
	overflow: hidden;
}

.format-gallery .slick-dots {
	text-align: left;
	margin: 0;
	padding: 0 2rem 0 2.4rem;
	position: absolute;
	top: auto;
	bottom: 2.4rem;
	left: 0;
}

.format-gallery .slider__slides {
	cursor: pointer;
	overflow: hidden;
	opacity: 0;
	visibility: hidden;
}

.format-gallery .slider__slides.slick-initialized {
	opacity: 1;
	visibility: visible;
}

/*# sourceMappingURL=main.css.map */

input::placeholder {
	color: white;
	opacity: 1; /* Firefox */
}

:-ms-input-placeholder {
	/* Internet Explorer 10-11 */
	color: red;
}

::-ms-input-placeholder {
	/* Microsoft Edge */
	color: red;
}

a.site-logo {
	color: white;
	font-size: 4rem;
}

.in-development {
	display: grid;
	place-items: center;
	font-size: 5rem;
	height: 80vh;
}

